# repostats

./: .gitignore  PLAN.md  README.md  config.toml.example  pyproject.toml
repostats/: __main__.py  collector.py  config.py  db.py  mailmap.py  main.py  models.py
repostats/routes/: api.py  dashboard.py
repostats/static/: style.css
repostats/templates/: base.html  dashboard.html
repostats/templates/partials/: change_patterns.html  commit_heatmap.html  commit_size.html  commit_timeline.html  contributor_detail.html  contributor_matrix.html  dashboard_content.html  directory_trends.html  file_health.html  language_breakdown.html  language_detail.html  repo_detail.html  repo_table.html  scan_status.html  summary_cards.html
tests/: test_collector.py  test_db.py  test_mailmap.py
